# ztf-query-comet

./: .gitignore  README.md  pyproject.toml
2024E1/: eph.csv
example-data/2019Y3/: eph.csv  fits_urls.txt  ztf.csv  ztf_20250106104907_000203_zr_c10_o_q1_sciimg.fits  ztf_20250106146331_000203_zg_c10_o_q1_sciimg.fits  ztf_20250109107373_000203_zg_c14_o_q4_sciimg.fits  ztf_20250113168970_000249_zg_c01_o_q2_sciimg.fits  ztf_20250114128495_000249_zr_c01_o_q1_sciimg.fits  ztf_20250116146979_000250_zg_c08_o_q3_sciimg.fits  ztf_20250116147917_000249_zg_c05_o_q4_sciimg.fits  ztf_20250116189606_000250_zr_c08_o_q3_sciimg.fits  ztf_20250119126400_000249_zg_c09_o_q4_sciimg.fits  ztf_20250120147292_000249_zg_c09_o_q1_sciimg.fits  ztf_20250120170289_000250_zg_c12_o_q2_sciimg.fits  ztf_20250122126100_000250_zg_c16_o_q3_sciimg.fits  ztf_20250216138021_000402_zg_c11_o_q2_sciimg.fits  ztf_20250216192384_000402_zr_c11_o_q2_sciimg.fits  ztf_20250218127442_000402_zr_c15_o_q1_sciimg.fits  ztf_20250221144653_000453_zg_c08_o_q1_sciimg.fits  ztf_20250221196181_000453_zr_c08_o_q1_sciimg.fits  ztf_20250409323808_000859_zr_c07_o_q1_sciimg.fits  ztf_20250409361875_000859_zg_c07_o_q1_sciimg.fits  ztf_20250411284560_000859_zg_c05_o_q2_sciimg.fits  ztf_20250411295868_000860_zg_c08_o_q2_sciimg.fits  ztf_20250411326007_000860_zr_c08_o_q2_sciimg.fits  ztf_20250411327442_000859_zr_c05_o_q2_sciimg.fits  (+9 more)
notebooks/: queryztf_2019Y3.ipynb  ztfquery_2019Y3.ipynb
ztf-sso-query/: __init__.py
ztfssoquery/: __init__.py  _construct_fitsurl.py  construct_fitsurl.py
