[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztfssoquery"
version = "0.1.0"
description = "Astronomy tools for SOLO project"
authors = [{ name = "Bumhoo Lim", email = "bumhoo7@snu.ac.kr" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
# Keep dependencies empty while you sort packaging; you can add later.
dependencies = [
    "astropy",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks*", "tests*"]
